import Foundation

class Builder {
    func makeTitle(_ text: String) {
        fatalError("サブクラスで実装して下さい")
    }
    func makeString(_ text: String) {
        fatalError("サブクラスで実装して下さい")
    }
    func makeItems(_ items: [String]) {
        fatalError("サブクラスで実装して下さい")
    }
    func close() {
        fatalError("サブクラスで実装して下さい")
    }
}
