import Foundation

/// 動作テスト
public class Main {
    public init() {
    }
}
